[gd_scene load_steps=14 format=3 uid="uid://dvhv8tl435t8h"]

[ext_resource type="Script" path="res://Ship/Door.gd" id="1_77ui8"]
[ext_resource type="Texture2D" uid="uid://dobw14md45sbd" path="res://Ship/tilesheet.png" id="1_niqmk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6kmdf"]
atlas = ExtResource("1_niqmk")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qopt1"]
atlas = ExtResource("1_niqmk")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhjmo"]
atlas = ExtResource("1_niqmk")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yt87e"]
atlas = ExtResource("1_niqmk")
region = Rect2(128, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_gghna"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kmdf")
}],
"loop": true,
"name": &"closed_horizontal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qopt1")
}],
"loop": true,
"name": &"closed_vertical",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhjmo")
}],
"loop": true,
"name": &"open_horizontal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yt87e")
}],
"loop": true,
"name": &"open_vertical",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s3hcj"]
size = Vector2(7, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dr5sq"]
size = Vector2(7, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q8qwe"]
size = Vector2(18, 32)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_r27t5"]
polygon = PackedVector2Array(-16, -8, -16, 8, -9, 8, -9, -8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_pyetu"]
polygon = PackedVector2Array(9, -8, 9, 8, 16, 8, 16, -8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_omlib"]
polygon = PackedVector2Array(-9, -8, -9, 8, 9, 8, 9, -8)

[node name="Door" type="Node2D"]
script = ExtResource("1_77ui8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_gghna")
animation = &"open_horizontal"

[node name="Hitbox" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StaticBody2DSides" type="StaticBody2D" parent="Hitbox"]

[node name="Left" type="CollisionShape2D" parent="Hitbox/StaticBody2DSides"]
position = Vector2(-12.5, 0)
shape = SubResource("RectangleShape2D_s3hcj")

[node name="Right" type="CollisionShape2D" parent="Hitbox/StaticBody2DSides"]
position = Vector2(12.5, 0)
shape = SubResource("RectangleShape2D_dr5sq")

[node name="StaticBody2DWalkway" type="StaticBody2D" parent="Hitbox"]

[node name="Walkway" type="CollisionShape2D" parent="Hitbox/StaticBody2DWalkway"]
shape = SubResource("RectangleShape2D_q8qwe")

[node name="Area2D" type="Area2D" parent="Hitbox"]
collision_layer = 2
collision_mask = 2

[node name="Walkway" type="CollisionShape2D" parent="Hitbox/Area2D"]
shape = SubResource("RectangleShape2D_q8qwe")

[node name="LeftOccluder" type="LightOccluder2D" parent="Hitbox"]
occluder = SubResource("OccluderPolygon2D_r27t5")

[node name="RightOccluder" type="LightOccluder2D" parent="Hitbox"]
occluder = SubResource("OccluderPolygon2D_pyetu")

[node name="WalkwayOccluder" type="LightOccluder2D" parent="Hitbox"]
occluder = SubResource("OccluderPolygon2D_omlib")

[node name="Button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
flat = true

[connection signal="body_shape_entered" from="Hitbox/Area2D" to="." method="_on_area_2d_body_shape_entered"]
[connection signal="body_shape_exited" from="Hitbox/Area2D" to="." method="_on_area_2d_body_shape_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
